Simplify findStationsBy and move filters hasPhoto and active into DB query